# rusty_ws_starwars_search

./: Cargo.toml  README.md
src/: main.rs
