[package]
name = "empiresearch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
env_logger = "0.10.0"
rust_socketio = "0.4.1"

